--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ voila = "*"
 jupyterlab = "*"
 matplotlib = "*"
 ipywidgets = "*"
+ipysheet = "*"
 markdown = "*"
 ipympl = "*"
 tornado = "*"
@@ -36,6 +37,7 @@ scikit-learn = "*"
 plotly = "*"
 ipyvuetify = "*"
 aenum = "*"
+gemseo = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
